fixed spacing between city name + weather pic

--- a/styles/index.css
+++ b/styles/index.css
@@ -31,7 +31,7 @@ header:hover {
     display: flex;
     flex-direction: row;
     justify-content: space-between;
-    /* margin-bottom: 5px; */
+    margin-bottom: 5px;
     font-size: 2vw;
 }
 
